# aivid-front

./: Cargo.toml  LICENSE
.github/workflows/: continuous_deployment.yml
src/: main.rs
