[package]
name = "aivid-front"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.93"
