[package]
name = "aivid-front"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.6"
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.2"
gloo-file = "0.2.1" 
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2.93"
base64 = "0.13.0"
web-sys = "0.3.57"
js-sys = "0.3.57"
reqwest = "0.11"
